--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,13 @@ readme = "README.md"
 homepage = "https://github.com/joaopalmeiro/linstall"
 repository = "https://github.com/joaopalmeiro/linstall"
 
+# https://github.com/python-poetry/poetry/issues/1440
+# https://python-poetry.org/docs/master/dependency-specification/#exact-requirements
 [tool.poetry.dependencies]
 python = "^3.7"
+click = "8.1.3"
+markdown-subtemplate = "0.2.22"
+pyperclip = "1.8.2"
 
 [tool.poetry.scripts]
 linstall = "linstall.console:run"
@@ -17,9 +22,17 @@ linstall = "linstall.console:run"
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/joaopalmeiro/linstall/issues"
 
+# https://python-poetry.org/docs/master/managing-dependencies/#dependency-groups
+[tool.poetry.group.dev.dependencies]
+black = "22.6.0"
+isort = "5.10.1"
+
 [tool.poetry-version-plugin]
 source = "init"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
